# vim-golf-bot

./: .gitignore  Cargo.toml
src/: challenge.rs  main.rs
src/commands/: manage.rs  math.rs  meta.rs  mod.rs  owner.rs  participate.rs  reports.rs
